--- a/css/common.css
+++ b/css/common.css
@@ -154,6 +154,15 @@ address {
     font-style: normal;
 }
 
+.blind {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+}
+
 /* footer */
 .footer {
     text-align: center;
