--- a/css/project05.css
+++ b/css/project05.css
@@ -128,7 +128,9 @@ body {
     border-top: 1px solid #ddd;
 }
 
-
+.mobile_btn {
+    display: none;
+}
 
 /* ---------- main_slide ---------- */
 .main_visual {
@@ -1159,17 +1161,27 @@ body {
         right: 0;
         z-index: 999;
         transition: 0.6s;
-
+        /*  */
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        color: #ddd;
+        white-space: nowrap;
+        background: 0;
     }
 
     .header:hover {
         background: #fff;
         border-bottom: 1px solid #ddd;
+        /*  */
+        transition: 0s;
     }
 
     .header.on {
         background: #fff;
-        border-bottom: 1px solid rgb(221, 221, 221, 0.3)
+        border-bottom: 1px solid rgb(221, 221, 221, 0.3);
     }
 
     .header .inner {
@@ -1177,6 +1189,10 @@ body {
         /* align-items: center; */
         /* height: 100px; */
         line-height: 100px;
+        /*  */
+        display: flex;
+        height: 80px;
+        line-height: 80px;
     }
 
     .header a {
@@ -1185,20 +1201,53 @@ body {
 
     .header .gnb {
         margin: 0 0 0 auto;
+        /*  */
+        position: fixed;
+        margin: 0 0 0 auto;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        transition: 0.5;
+    }
+
+    .header .gnb::before {
+        content: "";
+        position: absolute;
+        top: 100px;
+        left: 0;
+        width: 100%;
+        height: 0px;
+        background: rgba(0, 0, 0, 1);
+        z-index: 999;
+        display: none;
+        transition: 0.5s;
+    }
+
+    .header .gnb.on {
+        inset: 0 auto 0 0;
     }
 
     .header .gnb .sub_menu {
         font-weight: 500;
+        /*  */
+        position: relative;
+        font-size: 15px;
+        text-align: start;
     }
 
     .header .gnb>ul {
         display: flex;
-        gap: 40px;
         color: #fff;
+        /*  */
+        flex-direction: column;
+        background: #000;
+        gap: 0;
+        height: 100%;
+        padding: 100px 30px 100% 30px;
     }
 
     .header:hover .gnb>ul {
-        color: #444;
+        color: #fff;
     }
 
     .header.on .gnb>ul {
@@ -1229,28 +1278,43 @@ body {
 
     .header .gnb>ul>li {
         position: relative;
+        /*  */
     }
 
     .header .sub {
-        /* 원래 position 뒤에 display가 위치함.
-    다단메뉴 할 때는 예외. */
-        height: 0;
-        overflow: hidden;
-        position: absolute;
-        top: 110px;
+        position: static;
+        padding: 10px 30px;
+        width: 100%;
+        height: auto;
+        top: 130px;
         left: 50%;
-        transform: translate(-50%, 0);
-        z-index: 999;
-        font-size: 14px;
-        text-align: center;
-        width: 150%;
+        transform: translate(0, 0);
+        background: #ffffff;
+        text-align: start;
+        border-radius: 5px;
+        border: 0;
+        opacity: 1;
+        visibility: visible;
+        transition: none;
+        display: none;
+    }
+
+    .header .gnb .sub a {
+        padding: 0;
+        display: block;
+        color: #444;
+        font-size: 15px;
+        font-weight: 500;
         line-height: 40px;
+    }
+
+    .header .sub li {
         transition: 0.5s;
     }
 
     /* header01에서 hover 위치 조정으로 다단 메뉴 전체 나오게 하기 */
     .header .gnb:hover>ul>li .sub {
-        height: 200px;
+        height: 180px;
     }
 
     .header .gnb::before {
@@ -1271,6 +1335,65 @@ body {
         border-top: 1px solid #ddd;
     }
 
+    .mobile_btn {
+        display: block;
+        position: fixed;
+        inset: 30px 30px auto auto;
+        z-index: 1000;
+        width: 30px;
+        height: 30px;
+        background: rgba(221, 221, 221, 0);
+        border-radius: 5px;
+    }
+
+    .mobile_btn::before,
+    .mobile_btn::after {
+        content: "";
+        position: absolute;
+        inset: 14px 5px auto 5px;
+        height: 2px;
+        background: #ddd;
+    }
+
+    .mobile_btn.on::before {
+        transform: rotate(45deg);
+        transition: 0.5s 0.2s;
+    }
+
+    .mobile_btn.on::after {
+        transform: rotate(-225deg);
+        transition: 0.5s 0.6s;
+    }
+
+    .mobile_btn button {
+        border: none;
+        outline: none;
+        background: transparent;
+    }
+
+    .mobile_btn button::before,
+    .mobile_btn button::after {
+        content: "";
+        position: absolute;
+        height: 2px;
+        background: #ddd;
+    }
+
+    .mobile_btn button::before {
+        inset: 7px 5px auto 5px;
+    }
+
+    .mobile_btn button::after {
+        inset: auto 5px 7px 5px;
+    }
+
+    .mobile_btn.on button::before {
+        display: none;
+    }
+
+    .mobile_btn.on button::after {
+        display: none;
+    }
 
 
     /* ---------- main_slide ---------- */
